# registry-stac-api

./: pyproject.toml  setup.cfg
.github/workflows/: branch_cicd.yaml  codeql-analysis.yml  secrets-detection.yaml  stable-cicd.yaml  terraform_cicd.yaml  unstable-cicd.yaml
src/pds/registry/stac/: PDSClient.py  app.py  database_logic.py  types.py
terraform/: main.tf
tests/pds/registry/stac/: pds_stac_validator.py
